--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
 
-<img src="C:\Users\zahra\Downloads\skills_usa-removebg-preview.png"></a>
+<img src="C:\Users\zahra\Downloads\skills_usa-removebg-preview.png" alt="Skills USA logo> </a>
 
 
 
