--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 
 <body class="index">
 
+<div class="header"></div>
+<h1 class="text">Skills USA Principles of Engineering-Technology 2025<br> Kinematics and Projectile Motion</h1> 
 
-<h1 style="font-family: poppins;">Skills USA Principles of Engineering-Technology 2025<br> Kinematics and Projectile Motion</h1> 
+<img class=" img" src="C:/Users/zahra/Downloads/skills_usa-removebg-preview.png" alt="Skills USA Logo">
 
 
-
-<img src="C:\Users\zahra\Downloads\skills_usa-removebg-preview.png"></a>
-
+<li><a href="equations.html">Kinematic Equations</a></li>
+<li><a href="discussion.html">Disscussion Paper</a></li>
 
 
 
